--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "client": "react-scripts start",
     "client:dev": "cross-env-shell REACT_APP_API=\"/mock-api\" npm run client",
     "client:prod": "cross-env-shell REACT_APP_API=\"/api\" npm run client",
-    "server": "pokemock swagger/httpbin.yaml -p 3001",
+    "server": "pokemock swagger/swagger.json -p 3001",
     "test": "react-scripts test --env=jsdom",
     "build": "cross-env-shell REACT_APP_API=\"\" react-scripts build",
     "eject": "react-scripts eject"
