--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   "scripts": {
     "client": "react-scripts start",
     "client:dev": "cross-env-shell REACT_APP_API=\"/mock-api\" npm run client",
-    "client:prod": "cross-env-shell REACT_APP_API=\"/api\" npm run client",
+    "client:prod": "cross-env-shell REACT_APP_API=\"/prod-api\" npm run client",
     "server": "pokemock swagger/swagger.json -p 3001",
     "test": "react-scripts test --env=jsdom",
-    "build": "cross-env-shell REACT_APP_API=\"/api\" react-scripts build",
+    "build": "cross-env-shell REACT_APP_API=\"/prod-api\" react-scripts build",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
@@ -36,11 +36,11 @@
     "pokemock": "^1.2.0"
   },
   "proxy": {
-    "/api": {
-      "target": "http://httpbin.org/",
+    "/prod-api": {
+      "target": "https://patronage2018.intive-projects.com",
       "changeOrigin": true,
       "pathRewrite": {
-        "^/api": "/"
+        "^/prod-api": "/api"
       }
     },
     "/mock-api": {
