--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,15 @@
 {
-  "extends": "airbnb",
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "airbnb"
+  ],
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "ecmaFeatures": {
+        "jsx": true
+    }
+  },
   "env": {
     "browser": true,
     "jest": true
@@ -13,15 +23,24 @@
       }
     }],
     "jsx-a11y/anchor-is-valid": [ "error", {
-       "components": [ "Link" ],
-       "specialLink": [ "to" ]
-      }]
+      "components": [ "Link" ],
+      "specialLink": [ "to" ]
+    }],
+    "comma-dangle": ["error", "always-multiline", {
+      "functions": "never"
+    }]
   },
   "settings": {
     "import/resolver": {
       "node": {
         "moduleDirectory": ["node_modules", "src/"]
       }
+    },
+    "react": {
+      "version": "16.2"
     }
-  }
+  },
+  "plugins": [
+    "react"
+  ]
 }
