--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "client:prod": "cross-env-shell REACT_APP_API=\"/prod-api\" npm run client",
     "server": "pokemock swagger/swagger.json -p 3001",
     "test": "react-scripts test --env=jsdom",
+    "coverage": "react-scripts test --env=jsdom --coverage",
     "build": "cross-env-shell REACT_APP_API=\"/api\" react-scripts build",
     "eject": "react-scripts eject",
     "eslint": "eslint --ext js --ext jsx src",
